k8s/goldpinger/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: goldpinger
  labels:
    name: goldpinger
    app.kubernetes.io/name: goldpinger
    app.kubernetes.io/part-of: observability
